WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137948
[EFL] webview should be updated from (0,0) when using the evasGL.
https://bugs.webkit.org/show_bug.cgi?id=137948
Summary
[EFL] webview should be updated from (0,0) when using the evasGL.
Hunseop Jeong
Reported
2014-10-22 00:11:34 PDT
When using the evasGL, evas_object of webview have to update from (0,0) to the size of webview.
Attachments
Patch
(1.51 KB, patch)
2014-10-22 01:23 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(1.56 KB, patch)
2015-02-17 23:34 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(1.60 KB, patch)
2015-04-22 22:11 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2014-10-22 00:15:26 PDT
Now, webview didn't update the part of top in minibrowser. You can watch this error when scrolling the any page.
Hunseop Jeong
Comment 2
2014-10-22 01:23:52 PDT
Created
attachment 240255
[details]
Patch
Hunseop Jeong
Comment 3
2014-10-22 04:25:31 PDT
Hyowon, Could review this patch?
Hunseop Jeong
Comment 4
2014-10-22 04:26:41 PDT
Could you review this patch?
Ryuan Choi
Comment 5
2014-10-22 14:35:13 PDT
Comment on
attachment 240255
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=240255&action=review
> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:564 > - // sd->image is tied to a native surface, which is in the parent's coordinates. > - evas_object_image_data_update_add(sd->image, sd->view.x, sd->view.y, sd->view.w, sd->view.h); > + // sd->image have to update as the size of webview from (0,0) when using the evasGL. > + evas_object_image_data_update_add(sd->image, 0, 0, sd->view.w, sd->view.h);
I need more clear description about it. At least, I want to know how to reproduce the issue. If I remember correctly, it was tried but reverted long time ago.
Hunseop Jeong
Comment 6
2015-02-17 23:34:37 PST
Created
attachment 246804
[details]
Patch
Gyuyoung Kim
Comment 7
2015-04-22 07:27:13 PDT
Comment on
attachment 246804
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246804&action=review
> Source/WebKit2/ChangeLog:3 > + [EFL] webview have to update from (0,0) to the size of webView after
r180134
.
s/have/has/g
> Source/WebKit2/ChangeLog:9 > + (EwkView::displayTimerFired): Changed the point of start position to update the evasobject.
Could you explain what is problem now ?
> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:578 > + // sd->image have to update as the size of webview from (0,0) when using the evasGL.
I don't understand this comment well. Do you mean sd->image should be updated from (0, 0) when we use evasGL for graphics backend ?
Hunseop Jeong
Comment 8
2015-04-22 17:42:28 PDT
(In reply to
comment #7
)
> Comment on
attachment 246804
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=246804&action=review
> > > Source/WebKit2/ChangeLog:3 > > + [EFL] webview have to update from (0,0) to the size of webView after
r180134
. > > s/have/has/g > > > Source/WebKit2/ChangeLog:9 > > + (EwkView::displayTimerFired): Changed the point of start position to update the evasobject. > > Could you explain what is problem now ?
In my Minibrowser, The top part of the screen wasn't updated. Looks like freeze. I try to test at other PC but that also occurred. Is your Minibrowser okay?
> > > Source/WebKit2/UIProcess/API/efl/EwkView.cpp:578 > > + // sd->image have to update as the size of webview from (0,0) when using the evasGL. > > I don't understand this comment well. Do you mean sd->image should be > updated from (0, 0) when we use evasGL for graphics backend ?
Yes, sd->image should be updated from (0,0) if using the graphics backend.
Gyuyoung Kim
Comment 9
2015-04-22 18:47:21 PDT
Comment on
attachment 246804
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246804&action=review
>>> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:578 >>> + // sd->image have to update as the size of webview from (0,0) when using the evasGL. >> >> I don't understand this comment well. Do you mean sd->image should be updated from (0, 0) when we use evasGL for graphics backend ? > > Yes, sd->image should be updated from (0,0) if using the graphics backend.
I see. Please update this patch description and comment according to my comment again.
Hunseop Jeong
Comment 10
2015-04-22 22:11:35 PDT
Created
attachment 251405
[details]
Patch
Gyuyoung Kim
Comment 11
2015-05-26 00:32:05 PDT
Comment on
attachment 251405
[details]
Patch It would be nicer if Ryuan has a final review before landing.
WebKit Commit Bot
Comment 12
2015-05-26 18:08:45 PDT
Comment on
attachment 251405
[details]
Patch Clearing flags on attachment: 251405 Committed
r184892
: <
http://trac.webkit.org/changeset/184892
>
WebKit Commit Bot
Comment 13
2015-05-26 18:08:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug