[EFL] webview should be updated from (0,0) when using the evasGL. https://bugs.webkit.org/show_bug.cgi?id=137948

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-05-26
Reviewed by Gyuyoung Kim.

Changed the point of the start position to update the evasObject
correctly when using the evasGL for graphics backend.

* UIProcess/API/efl/EwkView.cpp:
(EwkView::displayTimerFired):

Canonical link: https://commits.webkit.org/163408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184892 268f45cc-cd09-0410-ab3c-d52691b4dbfc